use native texture size